--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "devDependencies": {
-    "react-scripts": "0.6.1"
+    "enzyme": "^2.4.1",
+    "react-addons-test-utils": "^15.3.2",
+    "react-scripts": "0.6.1",
+    "redux-devtools": "^3.3.1"
   },
   "dependencies": {
+    "lodash": "^4.16.2",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "superagent": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
