--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "redux-devtools": "^3.3.1"
   },
   "dependencies": {
+    "jwt-decode": "^2.1.0",
     "lodash": "^4.16.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-form": "^6.2.0",
     "redux-thunk": "^2.1.0",
     "superagent": "^2.3.0"
   },
