--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux": "^3.6.0",
     "redux-form": "^6.2.0",
     "redux-thunk": "^2.1.0",
+    "semantic-ui-react": "^0.68.5",
     "superagent": "^3.5.2"
   },
   "scripts": {
