--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.5",
+    "react-render-html": "^0.2.0",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
