--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "dependencies": {
+    "json-api-normalizer": "^0.4.1",
     "jwt-decode": "^2.1.0",
     "lodash": "^4.16.2",
     "react": "^15.3.2",
@@ -58,6 +59,7 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-form": "^6.2.0",
+    "redux-object": "^0.4.4",
     "redux-thunk": "^2.1.0",
     "semantic-ui-react": "^0.68.5",
     "superagent": "^3.5.2"
